<resources>
    <string name="app_name">19课堂</string>
    <string name="click_two_exit_message">再按一次退出程序</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_code"><u>获取验证码</u></string>
    <string name="souke_diqu">地区</string>
    <string name="souke_paixu">排序</string>
    <string name="souke_saixuan">筛选</string>

    <string name="msg_camera_framework_bug">相机被占用或没有相机权限，请检查</string>
    <string name="button_ok">退出</string>
    <string name="viewfinderview_status_text1">将二维码/条码放入取景框内</string>
    <string name="viewfinderview_status_text2">即可自动扫描</string>

    <string name="viewpager_indicator">%1$d/%2$d</string>

    <string name="settings_short_name">扫一扫</string>
    <string name="settings_long_name">扫一扫</string>
    <string name="settings_disable_msg">扫一扫不可用</string>

    <string name="register_short_name">登录</string>
    <string name="register_long_name">登录</string>
    <string name="register_disable_msg">登录不可用</string>

    <string name="zhuce_short_name">注册</string>
    <string name="zhuce_long_name">注册</string>
    <string name="zhuce_disable_msg">注册不可用</string>

    <string name="set_short_name">设置</string>
    <string name="set_long_name">设置</string>
    <string name="set_disable_msg">设置不可用</string>
</resources>
